# sudoku

./: Cargo.toml  Justfile  README.md
.github/workflows/: build-ios.yml  ci.yml  trigger-blog.yaml
crates/sudoku-core/: Cargo.toml  README.md
crates/sudoku-core/src/: hash.rs  lib.rs  solver.rs
crates/sudoku-core/src/solver/: SPECIFICATION.md  aic_engine.rs  als_engine.rs  basic.rs  explain.rs  fabric.rs  fish_engine.rs  mod.rs  types.rs  uniqueness.rs
crates/sudoku-ffi/: Cargo.toml
crates/sudoku-ffi/src/: lib.rs
crates/sudoku-tui/: Cargo.toml
crates/sudoku-tui/src/: app.rs  game.rs  leaderboard.rs  main.rs  persistence.rs  render.rs  stats.rs  telemetry.rs
crates/sudoku-wasm/: Cargo.toml
crates/sudoku-wasm/src/: game.rs  lib.rs  render.rs  theme.rs
crates/sudoku-wasm/www/: index.html
crates/sudoku-wasm/www/pkg/: sudoku_wasm.d.ts  sudoku_wasm.js  sudoku_wasm_bg.wasm  sudoku_wasm_bg.wasm.d.ts
docs/: index.html  privacy.html  privacy.md
ios/Sudoku/: project.yml
ios/Sudoku/Sudoku/: Info.plist
ios/Sudoku/Sudoku.xcodeproj/: project.pbxproj
ios/Sudoku/Sudoku/Models/: GameModels.swift
ios/Sudoku/Sudoku/Services/: GameManager.swift  PuzzleOCRService.swift  TelemetryService.swift
ios/Sudoku/Sudoku/ViewModels/: GameViewModel.swift  PuzzleConfirmationViewModel.swift
ios/Sudoku/Sudoku/Views/: CellView.swift  ContentView.swift  GameView.swift  GridView.swift  QRCodeView.swift  QRScannerView.swift  (+2 more)
ios/Sudoku/SudokuTests/: SudokuTests.swift
ios/Sudoku/SudokuUITests/: ConsolidatedMenuTests.swift  Info.plist
tasks/: prd-ios-sudoku-app.md
