[package]
name = "sudoku-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core Sudoku engine with solving, generation, and variant support"

[dependencies]
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
serde_json = "1"

[[example]]
name = "basic"
path = "../../examples/basic.rs"
